--- a/box_model.html
+++ b/box_model.html
@@ -11,7 +11,7 @@
 <meta name="author" content= "Manuel Barragan">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="box_model_style.css">
+<link rel="stylesheet" href="resources/box_model_style.css">
     
 </head>
     
