--- a/running.html
+++ b/running.html
@@ -11,7 +11,7 @@
 <meta name="author" content= "Manuel Barragan">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="resources/running_style.css">
+<link rel="stylesheet" href="running_style.css">
     
 </head>
 
@@ -28,7 +28,7 @@
 <h1>Trail Running in Ogden</h1>
 <p>Ogden is a great place for trail running. There are trails in the mountains and down through the valley. This provides a lot of variety for trail runners.</p>
 
-<a href="https://www.ogdenmarathon.com/"><img src="resources/runner.jpg" alt="Cynthia Fowler running on a trail in the Ogden Mountains" width="600" height="400"> </a>
+<a href="https://www.ogdenmarathon.com/"><img src="runner.jpg" alt="Cynthia Fowler running on a trail in the Ogden Mountains" width="600" height="400"> </a>
 
 
 <h2>Leaving From WSU</h2>
@@ -49,7 +49,7 @@ variety of trails. Weber has a webpage of <a href="https://www.weberpathways.org
 </ul>
 
 <p class="pic">
-<img src="resources/view.jpg" alt="View of a trail in the Ogden Mountains" width="685" height="385">
+<img src="view.jpg" alt="View of a trail in the Ogden Mountains" width="685" height="385">
 </p>
 
 
