--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <title>YOUR title here</title>
 
-<link rel="stylesheet" href="resources/index_style.css">
+<link rel="stylesheet" href="index_style.css">
     
 </head>
 
@@ -32,7 +32,7 @@ Hello my name is Manuel Barragan, I'm 24 years old and I am from Santa Ana, Cali
 <h2>Where is Manuel from?</h2>
 
 <p class="pic">
-<a href="https://www.google.com/imgres?q=manuel%20barragan%20weber%20state&imgurl=https%3A%2F%2Fimages.gofundme.com%2FvsluKLTZjuXVFESJZc85PROv6P4%3D%2F640x480%2Fhttps%3A%2F%2Fd2g8igdw686xgo.cloudfront.net%2F85469115_1736255871387868_r.jpeg&imgrefurl=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fhelp-bella-and-manny-compete-at-uca&docid=pH7U0MfRrmoYFM&tbnid=U7KvAjVMCsbCOM&vet=12ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA..i&w=640&h=480&hcb=2&ved=2ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA"><img src="resources/manuel.jpeg" alt="different types of borders" width="259" height="194"> </a>
+<a href="https://www.google.com/imgres?q=manuel%20barragan%20weber%20state&imgurl=https%3A%2F%2Fimages.gofundme.com%2FvsluKLTZjuXVFESJZc85PROv6P4%3D%2F640x480%2Fhttps%3A%2F%2Fd2g8igdw686xgo.cloudfront.net%2F85469115_1736255871387868_r.jpeg&imgrefurl=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fhelp-bella-and-manny-compete-at-uca&docid=pH7U0MfRrmoYFM&tbnid=U7KvAjVMCsbCOM&vet=12ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA..i&w=640&h=480&hcb=2&ved=2ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA"><img src="manuel.jpeg" alt="different types of borders" width="259" height="194"> </a>
 </p>
     
 <ol>
@@ -83,7 +83,7 @@ Below you will see the placess I have cheered at, for how long and any additonal
 <h3>Weber State Cheer in action</h3>
 
 <div>
-<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fp%2FWeber-State-University-Spirit-Squad-100063588433208%2F&psig=AOvVaw02mKo49uiKgumTQW5ZVhsh&ust=1743485229381000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjxj-nKs4wDFQAAAAAdAAAAABAE"><img src="resources/cancun.jpeg" alt="Weber cheer at Cancun" width="251" height="201"> </a>
+<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fp%2FWeber-State-University-Spirit-Squad-100063588433208%2F&psig=AOvVaw02mKo49uiKgumTQW5ZVhsh&ust=1743485229381000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjxj-nKs4wDFQAAAAAdAAAAABAE"><img src="cancun.jpeg" alt="Weber cheer at Cancun" width="251" height="201"> </a>
 </div>
 
 
@@ -100,7 +100,7 @@ This past year I have fell in love with <a href="https://www.weber.edu/ece/compu
 
 
 <div> 
-<a href="https://www.google.com/imgres?q=weber%20state%20computer%20engineering&imgurl=https%3A%2F%2Fapps.weber.edu%2Fwsuimages%2Fece%2Fsite_photos%2Fnoorda_render.jpg&imgrefurl=https%3A%2F%2Fweber.edu%2Fece%2Fece_at_weber_state.html&docid=7aal70t67q7snM&tbnid=qhtKOG4NTanChM&vet=12ahUKEwiJqdrc0bOMAxUIkYkEHeT_BKwQM3oECEwQAA..i&w=3000&h=1482&hcb=2&ved=2ahUKEwiJqdrc0bOMAxUIkYkEHeT_BKwQM3oECEwQAA"><img src="resources/engineering.jpeg" alt="Weber's Engineering building" width="320" height="158"> </a>    
+<a href="https://www.google.com/imgres?q=weber%20state%20computer%20engineering&imgurl=https%3A%2F%2Fapps.weber.edu%2Fwsuimages%2Fece%2Fsite_photos%2Fnoorda_render.jpg&imgrefurl=https%3A%2F%2Fweber.edu%2Fece%2Fece_at_weber_state.html&docid=7aal70t67q7snM&tbnid=qhtKOG4NTanChM&vet=12ahUKEwiJqdrc0bOMAxUIkYkEHeT_BKwQM3oECEwQAA..i&w=3000&h=1482&hcb=2&ved=2ahUKEwiJqdrc0bOMAxUIkYkEHeT_BKwQM3oECEwQAA"><img src="engineering.jpeg" alt="Weber's Engineering building" width="320" height="158"> </a>    
 </div>
 
 </body>
