--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Hello my name is Manuel Barragan, I'm 24 years old and I am from Santa Ana, Cali
 <h2>Where is Manuel from?</h2>
 
 <p class="pic">
-<a href="https://www.google.com/imgres?q=manuel%20barragan%20weber%20state&imgurl=https%3A%2F%2Fimages.gofundme.com%2FvsluKLTZjuXVFESJZc85PROv6P4%3D%2F640x480%2Fhttps%3A%2F%2Fd2g8igdw686xgo.cloudfront.net%2F85469115_1736255871387868_r.jpeg&imgrefurl=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fhelp-bella-and-manny-compete-at-uca&docid=pH7U0MfRrmoYFM&tbnid=U7KvAjVMCsbCOM&vet=12ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA..i&w=640&h=480&hcb=2&ved=2ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA"><img src="manuel.jpeg" alt="different types of borders" width="259" height="194"> </a>
+<a href="https://www.google.com/imgres?q=manuel%20barragan%20weber%20state&imgurl=https%3A%2F%2Fimages.gofundme.com%2FvsluKLTZjuXVFESJZc85PROv6P4%3D%2F640x480%2Fhttps%3A%2F%2Fd2g8igdw686xgo.cloudfront.net%2F85469115_1736255871387868_r.jpeg&imgrefurl=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fhelp-bella-and-manny-compete-at-uca&docid=pH7U0MfRrmoYFM&tbnid=U7KvAjVMCsbCOM&vet=12ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA..i&w=640&h=480&hcb=2&ved=2ahUKEwjbwdTZy7OMAxWiC3kGHb1oK60QM3oECBcQAA"><img src="manuel.jpeg" alt="Picture of Mnauel Barragan" width="259" height="194"> </a>
 </p>
     
 <ol>
