--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 <meta charset="UTF-8">
 
-<title>YOUR title here</title>
+
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>YOUR title here</title>
+<title>About Manuel</title>
 
 <link rel="stylesheet" href="index_style.css">
     
