--- a/box_model.html
+++ b/box_model.html
@@ -20,6 +20,7 @@
 <ul></ul>
     <li><a href="running.html">Trail running</a></li>
     <li><a href="box_model.html">CSS Box Model</a></li>
+    <li><a href="index.html">Manuel Barragan</a></li>
 <ul></ul>
 
     
